--- a/style.css
+++ b/style.css
@@ -12,20 +12,21 @@ a {
 }
 
 .container {
-    max-width: 1100px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
 }
 
 /* Header */
 header {
-    padding: 20px 0;
+    padding: 20px;
 }
 
 header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0;
 }
 
 header .logo {
@@ -52,24 +53,41 @@ header nav ul li a {
 
 /* Footer */
 footer {
-    background-color: #3e4d55;
-    padding: 40px 0;
-    margin-top: 40px;
+    background-color: #f0ebe1;
+    padding: 10px 0;
+    margin-top: 10px;
+    color: #3e4d55;
 }
 
 .footer-columns {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .footer-column {
-    flex: 1;
     padding: 0 20px;
 }
 
-.footer-column h3, .footer-column h4 {
+.footer-title {
+    font-size: 3em;
     font-family: 'Playfair Display', serif;
     font-weight: bold;
+    font-style: italic;
+    margin-top: 30px;
+}
+
+.footer-column h4 {
+    font-family: 'Playfair Display', serif;
+    font-weight: bold;
+    font-size: 2em;
+    margin-bottom: 30px;
+}
+
+.footer-column p {
+    font-family: 'Playfair Display', serif;
+    margin: 5px 0;
+
 }
 
 .section-title {
@@ -134,11 +152,12 @@ footer {
 
 .intro-body {
     font-family: 'Playfair Display', serif;
-    font-size: 1.5em;
+    font-size: 2em;
 }
 
 .provide {
     padding: 40px 0;
+    font-family: 'Playfair Display', serif;
 }
 
 .provide-grid {
@@ -156,8 +175,12 @@ footer {
 }
 
 .provide-item h3 {
-    font-family: 'Playfair Display', serif;
     font-weight: bold;
+    font-size: 1.5em;
+}
+
+.provide-item p {
+    font-size: 1.1em;
 }
 
 .mission {
@@ -178,6 +201,8 @@ footer {
 .mission-text {
     flex: 2;
     text-align: left;
+    font-size: 1.5em;
+    font-family: 'Playfair Display', serif;
 }
 
 .contact-form-section {
@@ -259,6 +284,8 @@ button {
 
 .about-text {
     flex: 1;
+    font-family: 'Playfair Display', serif;
+    font-size: 1.2em;
 }
 
 .about-image {
